--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Excel Workbook</title>
+    <title>Embedded Excely Workbook</title>
     <style>
         /* Add some basic styling for the iframe */
         iframe {
