--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <select id="excelDropdown">
-        <option value="">Select an Excelyy workbook:</option>
+        <option value="">Select an Excely workbook:</option>
 
         <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw?action=embedview&wdbipreview=true">Laptop</option>
 
@@ -45,10 +45,11 @@
         
     </select>
     <iframe id="embeddedExcel" src="" frameborder="0"></iframe>
-
+    <a id="navigateButton" class="button" href="#">Go to Sheet</a>
     <script>
         const dropdown = document.getElementById('excelDropdown');
         const iframe = document.getElementById('embeddedExcel');
+        const button = document.getElementById('navigateButton');
 
         dropdown.addEventListener('change', () => {
             const selectedValue = dropdown.value;
