--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                 iframe.src = ''; // Clear the iframe if no option is selected
             }
         });
+</script>
+<script>
         button.addEventListener('click', () => {
     const selectedSheetUrl = dropdown.value;
     const urlObj = new URL(selectedSheetUrl);
