--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
             height: 90vh;
             border: none;
         }
+.button {
+        background-color: #0078D4; /* Your desired background color */
+        color: white; /* Text color */
+        padding: 10px 20px; /* Adjust padding as needed */
+        border: none;
+        border-radius: 4px; /* Rounded corners */
+        cursor: pointer;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    /* Hover effect */
+    .button:hover {
+        background-color: #005A9E; /* Darker shade on hover */
+    }
     </style>
 </head>
 <body>
