--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         cursor: pointer;
         font-weight: bold;
         text-decoration: none;
+        position: relative; /* Ensure proper stacking order */
+        z-index: 1; /* Set a higher z-index to keep it above other elements */
     }
 
     /* Hover effect */
