--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <select id="excelDropdown">
-        <option value="">Select an Excely workbook:</option>
+        <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/Eca2SpaAR2hIs4aHRSTWkaUBMiOWBHaDGUdFjhQzTYgSXQ?action=embedview&wdbipreview=true">Pallet Locations</option>
         
         <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw?action=embedview&wdbipreview=true">Laptop</option>
 
