--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .button-container {
             justify-content: center;
             text-align: center; /* Center-align the buttons */
-            height: 100vh
+            height: 100vh;
         }
         .button {
             display: inline-block;
@@ -26,33 +26,19 @@
     </style>
 </head>
 <body>
-   
-
     <div class="button-container">
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw" class="button">Laptop</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXpBtm8n9MhApVWHwvgsAAwBaTPdm6OxFmsGP0q3Qg-vwQ" class="button">Desktop</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EYzJtT5X0cNJvgRh-Ui9ih4BdMUzSGO5O_uIAqTF6ATaEA" class="button">Network</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EcpZb_D5RQtDu9aU311Y45oBVi1dLpPQpXPqLP5YrID14Q" class="button">Retail</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EVyOUcHjdDROsqsDsE8h_VEBPDOdyBaaq55pfL8-ORedfg" class="button">Teardown</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/ETS04H-Fja9FtqiM7szZksgBb0XWAIdjj2rEl1rJBhNaTA" class="button">Monitor</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EY7LG5BQnAlIj5ritMoJH0QBXaNLa5cunfZ_NYRHbwJe9g" class="button">Server</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EajzLRs-hz9Nk7ZSoKPsC_EBvQ98GTDREh6qx4ugCZMfOw" class="button">Printer</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EUnCWxirZsVAvxKBtHlLk_8BekyWbG_ODYQrtB8aimWBuQ" class="button">UPS</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EbZzdtA9TrFDrTMNVoxBhNQBWPkRln2PohSOCnD6k7gmXw" class="button">Mobile</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EW6v_qD6Q1NIjyn2vXHOOqwB4WvxqHxPmjdMbWucpq3rwQ" class="button">Misc</a>
-
-        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdXWk7evLQdPvMz3yAymopEBZY-9lYulIibMJjMoyNrEPw" class="button">EY Laptop</a>
-
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw" class="button" target="_blank">Laptop</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXpBtm8n9MhApVWHwvgsAAwBaTPdm6OxFmsGP0q3Qg-vwQ" class="button" target="_blank">Desktop</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EYzJtT5X0cNJvgRh-Ui9ih4BdMUzSGO5O_uIAqTF6ATaEA" class="button" target="_blank">Network</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EcpZb_D5RQtDu9aU311Y45oBVi1dLpPQpXPqLP5YrID14Q" class="button" target="_blank">Retail</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EVyOUcHjdDROsqsDsE8h_VEBPDOdyBaaq55pfL8-ORedfg" class="button" target="_blank">Teardown</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/ETS04H-Fja9FtqiM7szZksgBb0XWAIdjj2rEl1rJBhNaTA" class="button" target="_blank">Monitor</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EY7LG5BQnAlIj5ritMoJH0QBXaNLa5cunfZ_NYRHbwJe9g" class="button" target="_blank">Server</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EajzLRs-hz9Nk7ZSoKPsC_EBvQ98GTDREh6qx4ugCZMfOw" class="button" target="_blank">Printer</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EUnCWxirZsVAvxKBtHlLk_8BekyWbG_ODYQrtB8aimWBuQ" class="button" target="_blank">UPS</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EbZzdtA9TrFDrTMNVoxBhNQBWPkRln2PohSOCnD6k7gmXw" class="button" target="_blank">Mobile</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EW6v_qD6Q1NIjyn2vXHOOqwB4WvxqHxPmjdMbWucpq3rwQ" class="button" target="_blank">Misc</a>
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdXWk7evLQdPvMz3yAymopEBZY-9lYulIibMJjMoyNrEPw" class="button" target="_blank">EY Laptop</a>
     </div>
 </body>
 </html>
