--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 <body>
     <div class="button-container">
+        <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/Eca2SpaAR2hIs4aHRSTWkaUBMiOWBHaDGUdFjhQzTYgSXQ" class="button" target="_blank">Pallet Locations</a>
         <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw" class="button" target="_blank">Laptop</a>
         <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXpBtm8n9MhApVWHwvgsAAwBaTPdm6OxFmsGP0q3Qg-vwQ" class="button" target="_blank">Desktop</a>
         <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EYzJtT5X0cNJvgRh-Ui9ih4BdMUzSGO5O_uIAqTF6ATaEA" class="button" target="_blank">Network</a>
