--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             text-decoration: none;
             border-radius: 5px;
         }
+        .version {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 12px;
+            color: #888888;
+        }
     </style>
 </head>
 <body>
@@ -41,5 +48,7 @@
         <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EW6v_qD6Q1NIjyn2vXHOOqwB4WvxqHxPmjdMbWucpq3rwQ" class="button" target="_blank">Misc</a>
         <a href="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdXWk7evLQdPvMz3yAymopEBZY-9lYulIibMJjMoyNrEPw" class="button" target="_blank">EY Laptop</a>
     </div>
+        </div>
+    <div class="version">Version 1.0.0</div>
 </body>
 </html>
