--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </head>
 <body>
     <select id="excelDropdown">
-        <option value="">Select a Workbook:</option>
-        <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/Eca2SpaAR2hIs4aHRSTWkaUBMiOWBHaDGUdFjhQzTYgSXQ?action=edit&wdbipreview=true">Pallet Locations</option>
+        <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBJ4u5jOPtfldN5XTZ_ihibg?action=embedview&wdbipreview=true">Points</option>
         
         <option value="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EdLJED75BjZLkg_B3fqPENMBX0Jnnt-9dzyLrR3Eb6XTuw?action=embedview&wdbipreview=true">Laptop</option>
 
