--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Embedded Excel Workbook - Points Sheet</h1>
-    <iframe src="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBiuJ-OVOFOoJiYy1QmcKcsg?e=SH7iM3&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0" width="100%" height="600px"></iframe>
+    <iframe src="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBiuJ-OVOFOoJiYy1QmcKcsg?e=SH7iM3&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0?action=embedview&wdbipreview=true" width="100%" height="600px"></iframe>
 </body>
 </html>
