--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Excel Workbook</title>
+    <title>Embedded Points Excel Workbook</title>
 </head>
 <body>
-    <h1>Embedded Excel Workbook - Points Sheet</h1>
+    <h1>Embedded Points Excel Workbook - Points Sheet</h1>
     <iframe src="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBRJvQoxuoqoT_Xr3njmM0VQ?e=uwRDGi&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0&action=embedview&wdbipreview=true&wdHideSheetTabs=true" width="100%" height="600px"></iframe>
 </body>
 </html>
