--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .iframe-container {
             position: relative;
             width: 100%;
-            height: 1000px;
+            height: 600px;
         }
         .iframe-container iframe {
             width: 100%;
@@ -24,12 +24,22 @@
             background-color: white; /* Match the background color */
         }
     </style>
+    <script>
+        function addCacheBuster() {
+            const iframe = document.getElementById('excelIframe');
+            const baseUrl = "https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBRJvQoxuoqoT_Xr3njmM0VQ?e=uwRDGi&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0&action=embedview&wdbipreview=true&wdHideSheetTabs=true";
+            const cacheBuster = `cachebuster=${new Date().getTime()}`;
+            iframe.src = `${baseUrl}&${cacheBuster}`;
+        }
+        window.onload = addCacheBuster;
+    </script>
 </head>
 <body>
     <h1>Embedded Excel Workbook - Points Sheet</h1>
     <div class="iframe-container">
-        <iframe src="https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBiuJ-OVOFOoJiYy1QmcKcsg?e=BR4awo&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0&action=embedview&wdbipreview=true&wdHideSheetTabs=true"></iframe>
+        <iframe id="excelIframe" width="100%" height="600px"></iframe>
         <div class="overlay"></div>
     </div>
+    <button onclick="addCacheBuster()">Refresh Data</button>
 </body>
 </html>
