--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script>
         function addCacheBuster() {
             const iframe = document.getElementById('excelIframe');
-            const baseUrl = "https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBRJvQoxuoqoT_Xr3njmM0VQ?e=uwRDGi&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0&action=embedview&wdbipreview=true&wdHideSheetTabs=true";
+            const baseUrl = "https://netorg4218172-my.sharepoint.com/:x:/g/personal/jack_nugent_wvtech_com_au/EXCUgp6gAyJOkqvZc1sGELMBiuJ-OVOFOoJiYy1QmcKcsg?e=BR4awo&nav=MTVfezQ1NUU1NDkyLTZBQTQtNDQ1Qi05MTc0LTcyMzZGQjAyMUY4NH0&action=embedview&wdbipreview=true&wdHideSheetTabs=true";
             const cacheBuster = `cachebuster=${new Date().getTime()}`;
             iframe.src = `${baseUrl}&${cacheBuster}`;
         }
