--- a/index.html
+++ b/index.html
@@ -31,13 +31,24 @@
             const cacheBuster = `cachebuster=${new Date().getTime()}`;
             iframe.src = `${baseUrl}&${cacheBuster}`;
         }
-        window.onload = addCacheBuster;
+
+        function scrollToColumnA() {
+            const iframe = document.getElementById('excelIframe');
+            iframe.onload = function() {
+                iframe.contentWindow.scrollTo(0, 0); // Adjust the scroll position as needed
+            };
+        }
+
+        window.onload = function() {
+            addCacheBuster();
+            scrollToColumnA();
+        };
     </script>
 </head>
 <body>
     <h1>Embedded Excel Workbook - Points Sheet</h1>
     <div class="iframe-container">
-        <iframe id="excelIframe" width="100%" height="600px"></iframe>
+        <iframe id="excelIframe" width="100%" height="1000px"></iframe>
         <div class="overlay"></div>
     </div>
     <button onclick="addCacheBuster()">Refresh Data</button>
